5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1618_2921.log
== TEST (2019-04-02 10:21:29) 
-- CODE:
j1 = float(input("valor do jogo1:"))
j2 = float(input("valor do jogo2:"))

descj2 = j2 - (j2*0.25)
total = j1+descj2

print(round(desc,2))
print(round((total,2))
-- ERROR:
File "XXXX", line 9
    
                          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:22:23) 
-- CODE:
j1 = float(input("valor do jogo1:"))
j2 = float(input("valor do jogo2:"))

descj2 = j2 - (j2*0.25)
total = j1+descj2

print(round(desc,2))
print(round(total,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(round(desc,2))
NameError: name 'desc' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 10:23:06) 
-- CODE:
j1 = float(input("valor do jogo1:"))
j2 = float(input("valor do jogo2:"))

descj2 = j2 - (j2*0.25)
total = j1+descj2

print(round(descj2,2))
print(round(total,2))
-- OUTPUT:
66.94
209.29
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:23:29) 
-- CODE:
j1 = float(input("valor do jogo1:"))
j2 = float(input("valor do jogo2:"))

descj2 = j2 - (j2*0.25)
total = j1+descj2

print(round(descj2,2))
print(round(total,2))
-- EXECUTION TIME:
0.17427
-- TEST CASE 1:
---- input:
142.35
89.25
---- correct output:
66.94
209.29
---- user output:
66.94
209.29
-- TEST CASE 2:
---- input:
99.99
109.99
---- correct output:
82.49
182.48
---- user output:
82.49
182.48
-- TEST CASE 3:
---- input:
102.12
85.87
---- correct output:
64.4
166.52
---- user output:
64.4
166.52
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
